--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "sass": "^1.83.4",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0.8"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3",
-        "sass": "^1.83.4"
+        "bootstrap": "^5.3.3"
     }
 }
